Fix code styling on small screen

--- a/code/styles/base/_typography.scss
+++ b/code/styles/base/_typography.scss
@@ -93,7 +93,3 @@ ul {
   margin: 0;
   padding: 0;
 }
-
-pre {
-  clear: both;
-}
